<resources>
    <string name="app_name">蓝田河长通</string>
    <!--<string name="app_name">华阴河长通</string>-->

    <!-- TODO: Remove or change this placeholder text -->
    <string name="about_txt">\u3000\u3000河长制管理信息系统以《关于全面推行河长制的意见》为指导，按照“明确目标、落实责任、长效监管、严格考核”的总体要求，通过信息化监控管理举措，推动河湖生态环境保护与修复，全面改善河湖水质和水环境，促进经济社会与生态环境协调发展。</string>
    <string name="company">©陕西华恒水务集团有限公司</string>
    <string name="estr">All Rights Reserved</string>
    <string name="log_lin1">河道保洁，河岸绿化养护是否存在污染</string>
    <string name="log_lin2">是否存在各类污水排口，工业企业、污水处理设施等是否偷排、漏排及超标排放等环境违法行为</string>
    <string name="log_lin3">河岸是否存在涉水违法建筑物（构筑物）、何种是否存在阻水障碍物</string>
    <string name="log_lin4">是否存在河岸垃圾和泥浆渣土、工业固废等弃物入河现象</string>
    <string name="log_lin5">河道水质有无异常变化</string>
</resources>
